[gd_scene load_steps=2 format=3 uid="uid://dwbjkvh1wum2p"]

[ext_resource type="Script" uid="uid://dxehd8lae6dij" path="res://scenes/menu/hud_entry_family.gd" id="1_qr6fb"]

[node name="HudEntryFamily" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qr6fb")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="Stats" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="HungerLabel" type="Label" parent="Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HungerBar" type="ProgressBar" parent="Stats"]
layout_mode = 2
size_flags_horizontal = 3
